rnsc/test_data/integration/error/parser/type_hints/utf8/int_operand.rns
.class Foo
.super @utf8 42